# viguno

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  openapi.yaml
.github/workflows/: docker-build.yml  release-please.yml  rust.yml
protos/viguno/v1/: simulation.proto
src/: common.rs  error.rs  index.rs  lib.rs  main.rs  pbs.rs
src/algos/: mod.rs  phenomizer.rs
src/convert/: mod.rs
src/prepare/: mod.rs
src/query/: mod.rs
src/server/: mod.rs  schema.rs
src/server/actix_server/: hpo_genes.rs  hpo_omims.rs  hpo_terms.rs  mod.rs
src/server/actix_server/hpo_sim/: term_gene.rs  term_term.rs
src/server/actix_server/snapshots/: viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_id_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_id_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_contains_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_contains_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_prefix_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_prefix_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_suffix_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_suffix_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_hgnc_gene_id_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_hgnc_gene_id_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_ncbi_gene_id_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_genes__test__hpo_genes_ncbi_gene_id_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_contains_no_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_contains_with_genes.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_contains_with_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_prefix_no_genes.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_prefix_no_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_prefix_with_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_suffix_no_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_name_suffix_with_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_omim_id_exact_no_hpo_terms.snap  viguno__server__actix_server__hpo_omims__test__hpo_omims_omim_id_exact_with_hpo_terms.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_contains_no_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_contains_with_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_exact_no_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_exact_with_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_prefix_no_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_prefix_with_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_suffix_no_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_name_suffix_with_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_term_id_exact_no_genes.snap  viguno__server__actix_server__hpo_terms__test__hpo_terms_term_id_exact_with_genes.snap
src/server/run/: hpo_genes.rs  hpo_omims.rs  hpo_terms.rs  mod.rs
src/server/run/hpo_sim/: mod.rs  term_gene.rs  term_term.rs
src/server/run/snapshots/: viguno__server__actix_server__hpo_genes__test__hpo_genes_gene_symbol_contains_no_hpo_terms.snap  (+39 more)
src/simulate/: mod.rs
tests/data/: hgnc_xlink.tsv
tests/data/hpo/: bootstraph.sh  genes_to_phenotype.txt  hgnc_xlink.tsv  hp.obo  phenotype.hpoa  phenotype_to_genes.txt
tests/data/hpo/resnik/: 000014.sst  000016.sst  (+4 more)
utils/: install-protoc.sh
utils/docker/: Dockerfile  build-docker.sh  entrypoint.sh
utils/terraform/: main.tf
(+21 files in other folders)
