[package]
name = "viguno"
version = "0.1.7"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Rust template repository"
license = "Apache-2.0"
homepage = "https://github.com/bihealth/viguno"
readme = "README.md"

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "help", "env"] }
clap-verbosity-flag = "2.0"
console = "0.15"
csv = "1.1"
derive_more = "0.99"
env_logger = "0.10"
fastrand = "2.0"
flate2 = "1.0"
hpo = "0.8"
indexmap = { version = "2.0", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.18"
prost = "0.12"
rayon = "1.8"
regex = "1.9"
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
rocksdb-utils-lookup = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_with = "3.3"
shellexpand = "3.0"
strum = { version = "0.25", features = ["strum_macros", "derive"] }
strum_macros = "0.25"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
file_diff = "1.0"
insta = { version = "1.33", features = ["yaml"] }
serde_test = "1.0"
temp_testdir = "0.2"

[[bin]]
name = "viguno"
path = "src/main.rs"
