[package]
name = "viguno"
version = "0.4.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Phenotype/disease for VarFish"
license = "Apache-2.0"
repository = "https://github.com/varfish-org/viguno"
readme = "README.md"

[dependencies]
actix-web = "4.9"
anyhow = "1.0"
clap-verbosity-flag = "3.0"
clap = { version = "4.5", features = ["derive", "help", "env"] }
console = "0.15"
csv = "1.3"
derive_more = { version = "1.0", features = ["full"] }
env_logger = "0.11"
fastobo = "0.15.2"
fastrand = "2.3"
flate2 = "1.0"
hpo = "0.11"
indexmap = { version = "2.7", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.13"
lazy_static = "1.5"
log = "0.4"
once_cell = "1.18"
prost = "0.13"
rayon = "1.8"
regex = "1.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_with = { version = "3.9", features=["alloc", "macros", "indexmap_2"], default-features = false }
shellexpand = "3.0"
strum_macros = "0.26"
strum = { version = "0.26", features = ["strum_macros", "derive"] }
tantivy = "0.22"
tempdir = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-swagger-ui = { version = "8.0", features = ["actix-web"] }
utoipa = { version = "5.2", features = ["actix_extras", "chrono", "indexmap", "preserve_order", "yaml"] }

[build-dependencies]
anyhow = "1.0"
prost-build = "0.13"

[dev-dependencies]
file_diff = "1.0"
insta = { version = "1.41", features = ["yaml"] }
rstest = "0.23"
serde_test = "1.0"
temp_testdir = "0.2"

[[bin]]
name = "viguno"
path = "src/main.rs"
